--- a/content/post/05001_BART.Rmd
+++ b/content/post/05001_BART.Rmd
@@ -51,39 +51,26 @@ knitr::include_graphics("/images/BART/界面.png")
 
 # 配置参数
 
-: 配置参数总表
-
-| 参数类型 | 参数名称               | 类型   | 默认值 | 说明                                             |
-|----------|------------------------|--------|--------|--------------------------------------------------|
-| 刺激序列 | `quantity`             | `int`  | 30     | 气球总个数                                       |
-| 刺激序列 | `maxBlow`              | `int`  | 64     | 单个气球最大打气次数                             |
-| 操作反馈 | `feedbackCorrectError` | `bool` | 0      | 注意本任务没有正确错误之分，也就不需要反馈正误了 |
-| 操作反馈 | `feedbackNoResponse`   | `bool` | 0      | 注意本任务不会出现没有操作的试次                 |
-| 操作反馈 | `feedbackSound`        | `bool` | 1      | 控制正式测评时候是（1）否（0）给出声音反馈       |
-| 操作反馈 | `feedbackVisual`       | `bool` | 1      | 控制正式测评时候是（1）否（0）给出声音反馈       |
+```{r configs, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "configs.csv")),
+             caption = "配置参数总表")
+```
 
 # 数据记录
 
 * 题目结果显示
     + 显示获得的奖励分数和成功兑换奖励的气球个数
     + 展示标准分数和超越百分比
-* 提交原始数据变量表（统一使用`;`分割不同试次；使用`,`分割单个试次中记录的不同变量。）
+* 提交原始数据如下表（请参考[标准](`r blogdown::shortcode("relref", "standard.html")`)）
 
-| 名称         | 类型   | 说明                   |
-|--------------|--------|------------------------|
-| `balloon`    | `int`  | 气球编号，即第几个气球 |
-| `NHit`       | `int`  | 打气次数               |
-| `Feedback`   | `bool` | 气球是否爆炸           |
-| `CurUtility` | `int`  | 当前气球的奖励         |
-| `CumUtility` | `int`  | 累计奖励               |
+```{r recording-variables, echo=FALSE, message=FALSE, warning=FALSE}
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "recs.csv")),
+             caption = "原始数据变量列表")
+```
 
 # 试题算分
 
-* 算分码：`r SDK`
-* 传入参数：
-
-| 参数名称 | 类型        | 说明                     |
-|----------|-------------|--------------------------|
-| `hits`   | `int array` | 所有未爆炸气球的打气次数 |
-
-# 修订历史
+```{r sdk-score, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+knitr::kable(readr::read_csv(here::here("data", "config", NAME_EN, "sdk.csv")),
+             caption = paste0("传入参数（算分码：`", SDK, "`）"))
+```
