--- a/content/post/05001_BART.Rmd
+++ b/content/post/05001_BART.Rmd
@@ -42,12 +42,13 @@ knitr::include_graphics("/images/BART/界面.png")
 
 # 详细说明
 
-* 气球爆炸几率
-    + 假设气球最大打气次数为 $N$ （参数配置），那么，用户第 $K$ 次打气时的气球爆炸的概率为 $\frac{1}{N - K + 1}$ 。例如：
-        - 若气球最大打气次数为`5`。
-        - 用户执行第1次打气时，则从[1, 2, 3, 4, 5]的数组中随机取一个数字：若取到1，则打气后气球爆炸；若未取到1，则气球增大，同时奖金池增大5。
-        - 若用户执行第2次打气，则从[1, 2, 3, 4]的数组中随机取一个数字：若取到1，则打气后气球爆炸；若未取到1，则气球增大，同时奖金池增大5。
-        - 依此类推。
+**气球爆炸几率**。假设气球最大打气次数为 $N$ （参数配置），那么，用户第 $K$ 次打气时的气球爆炸的概率为 $\frac{1}{N - K + 1}$ 。例如：若气球最大打气次数为`5`，那么
+
+1. 用户执行第1次打气时，则从[1, 2, 3, 4, 5]的数组中随机取一个数字：若取到1，则打气后气球爆炸；若未取到1，则气球增大，同时奖金池增大5。
+1. 若用户执行第2次打气，则从[1, 2, 3, 4]的数组中随机取一个数字：若取到1，则打气后气球爆炸；若未取到1，则气球增大，同时奖金池增大5。
+1. 依此类推。
+
+**实际测评**。实际测评时会保证气球个数是最大打气次数的倍数。例如最大打气次数为10，气球个数设置为10，20，30，……。假如这个倍数是 $M$ ，那么实际测评时候就有 $M \times N$ 个气球。测评时候随机设定这些气球的爆炸次数为1，2，3，……，N，且每种爆炸次数的气球个数都为 $M$ 个。
 
 # 配置参数
 
