--- a/content/post/02102_firefly.Rmd
+++ b/content/post/02102_firefly.Rmd
@@ -32,7 +32,7 @@ SDK <- 301
 
 # 交互界面
 
-夜晚森林的背景中随机位置出现一些萤火虫，一开始其中有些会发光（原地闪烁黄光）有些不发光（不发光的萤火虫个数始终比发光的**多2个**），发光的萤火虫闪烁一定时间后亮光消失（同不发光的萤火虫一模一样）同时所有萤火虫都开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁过的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式（如图\@ref(fig:taskflow-image)）。
+夜晚森林的背景中随机位置出现一些萤火虫，一开始其中有些会发光（原地闪烁黄光）有些不发光（不发光的萤火虫个数始终固定为**12只**），发光的萤火虫闪烁一定时间后亮光消失（同不发光的萤火虫一模一样）同时所有萤火虫都开始飞舞，最后停在新的位置，用户需要点击刚刚闪烁过的萤火虫，用触摸（Android/iOS）或鼠标点击（PC）的方式（如图\@ref(fig:taskflow-image)）。
 
 ```{r taskflow-image, fig.cap="基本界面", fig.align='center', echo=FALSE, out.width="80%"}
 knitr::include_graphics("/images/VSTM/firefly.png")
@@ -46,7 +46,7 @@ knitr::include_graphics("/images/VSTM/firefly.png")
 
 + **刺激配置**：由若干萤火虫的图片组成。其中：发光的萤火虫为**目标刺激**，不发光的为**干扰刺激**，详细请看下方**刺激列表**。
 + **刺激呈现**
-    - 出现若干萤火虫（不同的目标刺激对应不同的干扰刺激），其中目标刺激开始闪烁，闪烁次数默认值为3次，每次闪烁时间默认值为`300 ms`。首次出现目标刺激的个数定为3，目标刺激的下限为2，没有上限，即最少的闪烁萤火虫的个数为2。
+    - 出现若干萤火虫（目标刺激的数量自适应，干扰刺激的数量固定为12），其中目标刺激开始闪烁，闪烁次数默认值为3次，每次闪烁时间默认值为`300 ms`。首次出现目标刺激的个数定为3，目标刺激的下限为2，上限为10，即发光的萤火虫最多为10只最少为2只。
     - 闪烁结束，目标刺激与干扰刺激变得相同，所有萤火虫开始飞舞，默认值为`3000 ms`，速度为30。
     - 飞舞结束，所有萤火虫停到新的位置，用户开始判断，哪些是目标刺激（之前闪烁过的萤火虫），用户点击次数需与目标个数一致，方可开始下一轮。
     - 刺激消失后到下一个刺激呈现的时间间隔（试次间隔时间）默认值为`500 ms`。
@@ -67,13 +67,13 @@ knitr::include_graphics("/images/VSTM/fireflyfeedback.png")
 
 ## 序列配置
 
-每次目标刺激的数目根据用户之前的成绩进行自适应，干扰刺激数目保持目标刺激+2，遵循如下规则：当前试次做对，下一次目标刺激个数加一；当前试次做错，下一次目标刺激的数目不改变；当前做错，下一次也做错，再下次中目标刺激的个数减一。
+每次目标刺激的数目根据用户之前的成绩进行自适应，干扰刺激数目保持12只，遵循如下规则：当前试次做对，下一次目标刺激个数加一；当前试次做错，下一次目标刺激的数目不改变；当前做错，下一次也做错，再下次中目标刺激的个数减一。
 
-* 例：第1个试次中有3只发光萤火虫，即5只不发光萤火虫，总计8只
+* 例：第1个试次中有3只发光萤火虫，12只不发光萤火虫，总计15只
   + 用户第1个试次做对，第2个试次中发光萤火虫的个数变为4；
   + 用户第1个试次做错，第2个试次中发光萤火虫的个数还是3，若第2个试次也做错，则第3个试次中发光萤火虫的个数变为2；若第2个试次做对，第3个试次中发光萤火虫的个数变为4。
 
-10个试次后，游戏停止。
+10个试次后，游戏终止。
 
 # 配置参数
 
@@ -87,7 +87,6 @@ knitr::kable(readr::read_csv(here::here("R", "config", NAME_EN, "configs.csv")),
 ## 结果显示
 
 * 显示用户得分
-* 展示标准分数和超越百分比
 
 ## 提交数据
 
